--- a/src/styles.css
+++ b/src/styles.css
@@ -9,17 +9,33 @@
     width: 100px;
 }
 
-
+.navitems{
+    color: #808080;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    padding: 15px;
+   
+    
+}
 .navitems>ul {
     display: flex;
-    padding: 0px;
-    list-style-type: none;
-    font-size: 20px;
+    align-items: center;
+    margin: auto;
+    flex-direction: row;
+    gap: 10px;
+   
+    padding: 0;
 }
 
 .navitems>ul>li {
+    text-decoration: none;
     padding: 10px;
     margin: 10px;
+    justify-content: space-between;
+    justify-items: auto;
+   
+ 
 }
 
 
