--- a/src/styles.css
+++ b/src/styles.css
@@ -99,3 +99,29 @@ margin: auto;
     display: flex;
     
 }
+
+.user-card{
+    display: grid;
+    /* grid-template-columns: repeat(1fr);
+    grid-template-rows: auto 1fr auto;
+    grid-gap: 10px;
+    max-width: 300px; */
+    background-color: green;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.userclass-card{
+    display: grid;
+   
+    background-color: tomato;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.about-us{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr; /* Two columns with equal width */
+}
