--- a/src/styles.css
+++ b/src/styles.css
@@ -9,22 +9,23 @@
     width: 100px;
 }
 
-.navitems{
+.navitems {
     color: #808080;
     display: flex;
     align-items: center;
     cursor: pointer;
     padding: 15px;
-   
-    
+
+
 }
+
 .navitems>ul {
     display: flex;
     align-items: center;
     margin: auto;
     flex-direction: row;
     gap: 10px;
-   
+
     padding: 0;
 }
 
@@ -34,8 +35,8 @@
     margin: 10px;
     justify-content: space-between;
     justify-items: auto;
-   
- 
+
+
 }
 
 
@@ -59,8 +60,6 @@
     border: 1px solid black;
 }
 
-.search {}
-
 .card-img {
     width: 100%;
 
@@ -80,27 +79,26 @@
     margin-left: 15px;
 }
 
-.filter-button{
+.filter-button {
     /* margin: 10px; */
     cursor: pointer;
     display: flex;
     margin-left: 20px
-   
 }
 
-.login-button{
-    padding:0 10px;
-margin: auto;
+.login-button {
+    padding: 0 10px;
+    margin: auto;
     height: 40px;
-    width:50px
+    width: 50px
 }
 
-.filter{
+.filter {
     display: flex;
-    
+
 }
 
-.user-card{
+.user-card {
     display: grid;
     /* grid-template-columns: repeat(1fr);
     grid-template-rows: auto 1fr auto;
@@ -112,16 +110,17 @@ margin: auto;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.userclass-card{
+.userclass-card {
     display: grid;
-   
+
     background-color: tomato;
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.about-us{
+.about-us {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr; /* Two columns with equal width */
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* Two columns with equal width */
 }
